@@ -5,6 +5,8 @@
 	* avtterm.c (set_foreground_color):
 	make dark foreground colors a little less dark
 
+	* avtmenu.c: work with dark background
+
 2013-06-17  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtgraphic.h, avtgraphic.c (avt_darker, avt_brighter):
